src/scss/template.scss
$primary-color: #333;


  /* apply a natural box layout model to all elements */
*, *:before, *:after {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  overflow-y: scroll; 
}

body {
  font-size: 1em;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  margin: 0;
  border: 0;
}

#aside {
  display: block;
  background-color: #EFE8EE;

  a {
    margin-top: 20px;
    text-align: center;
    display: block;
  }
}

#markdown-body {
  max-width: 750px;
  padding: 10px;
}

#tags-input-container {
  height: 3em;
  display: block;

  div {
    width: 100%;
    height: 100%;
  }
}

#tag-line {
  display: block;
  text-align: center;
}


/* DESKTOP */

@media (min-width: 900px) {

  #aside {
    width: 300px;
    height: 100%;
    position: fixed;
    left: 0;
    top: 0;
  }

  #aside img {
    height: 130px;
    border-radius: 65px;
  }

  #markdown-body {
    position: absolute;
    left: 340px;
    top: 0;
    right: 0;
    bottom: 0;
  }

  #tags-input-container {
    background-color: #fff;
    box-shadow: -1px 1px 1px #9E9E9E;
  }
}

/* MOBILE */

@media (max-width: 899px) {

  #aside {
    width: 100%;
    float: left;
    position: relative;
  }

  #aside img {
    height: 80px;
    border-radius: 40px;
  }

  #markdown-body {
    z-index: 0;
    margin: 0 auto;
    clear: both;
    width: 100%;
  }

  #tags-input-container {
    margin: 0 20px 15px;
    border-bottom: 1px solid rgb(198, 200, 183);
  }
}

